--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -105,49 +105,113 @@
         ngModel 
         required
         #cep="ngModel"
-        pattern="^(\d{5})(-?\d{3})$" minlength="8" maxlength="9"
+        pattern="^(\d{5})(-?\d{3})$"
+        minlength="8" maxlength="9"
+        (blur)="consultaCEP($event, f)"
+        validadorCep
       />
       <div *ngIf="cep?.invalid && cep?.touched || cep?.dirty">
         <app-mensagem 
-            *ngIf="cep?.errors?.['required']" 
-            mensagem="O CEP deve ser preenchido."></app-mensagem>
-          <app-mensagem 
-            *ngIf="cep?.errors?.['pattern']" 
-            mensagem="O CEP deve ser válido."></app-mensagem>
+          *ngIf="cep?.errors?.['required']" 
+          mensagem="O CEP deve ser preenchido."></app-mensagem>
+        <app-mensagem 
+          *ngIf="cep?.errors?.['pattern']" 
+          mensagem="O CEP deve ser válido."></app-mensagem>
+        <app-mensagem 
+          *ngIf="cep?.errors?.['validadorCep']" 
+          mensagem="O CEP informado não foi encontrado."></app-mensagem>
       </div>
     </div>
 
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="endereco">Endereço</label>
-      <input name="endereco" id="endereco" class="campo__escrita" />
+      <input 
+        name="endereco" 
+        id="endereco" 
+        class="campo__escrita"
+        ngModel
+        #endereco="ngModel"
+        required      
+      />
+      <div *ngIf="endereco?.invalid && endereco?.touched || endereco?.dirty">
+        <app-mensagem 
+          *ngIf="endereco?.errors?.['required']" 
+          mensagem="O endereço deve ser preenchido."></app-mensagem>
+      </div>
     </div>
 
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="numero">Número</label>
-        <input name="numero" id="numero" class="campo__escrita" />
+        <input 
+          name="numero"
+          id="numero" 
+          class="campo__escrita"
+          ngModel
+          #numero="ngModel"
+          required
+        />
+        <div *ngIf="numero?.invalid && numero?.touched || numero?.dirty">
+          <app-mensagem 
+            *ngIf="numero?.errors?.['required']" 
+            mensagem="O número deve ser preenchido."></app-mensagem>
+        </div>
       </div>
 
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="complemento">Complemento</label>
-        <input name="complemento" id="complemento" class="campo__escrita" />
+        <input 
+          name="complemento" 
+          id="complemento" 
+          class="campo__escrita" />
       </div>
     </div>
 
     <div class="formulario__campo">
       <label class="campo__etiqueta" for="bairro">Bairro</label>
-      <input name="bairro" id="bairro" class="campo__escrita" />
+      <input 
+        name="bairro" 
+        id="bairro" 
+        class="campo__escrita" 
+        ngModel
+        #bairro="ngModel"
+        required
+        />
+        <div *ngIf="bairro?.invalid && bairro?.touched || bairro?.dirty">
+          <app-mensagem 
+            *ngIf="bairro?.errors?.['required']" 
+            mensagem="O bairro deve ser preenchido."></app-mensagem>
+        </div>
     </div>
 
     <div class="formulario__dupla">
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="cidade">Cidade</label>
-        <input name="cidade" id="cidade" class="campo__escrita" />
+        <input 
+          name="cidade" 
+          id="cidade" 
+          class="campo__escrita" 
+          ngModel
+          #cidade="ngModel"
+          required   
+        />
+        <div *ngIf="cidade?.invalid && cidade?.touched || cidade?.dirty">
+          <app-mensagem 
+            *ngIf="cidade?.errors?.['required']" 
+            mensagem="A cidade deve ser preenchida."></app-mensagem>
+        </div>
       </div>
 
       <div class="formulario__campo">
         <label class="campo__etiqueta" for="estado">UF</label>
-        <select id="estado" name="estado" class="campo__escrita">
+        <select 
+          id="estado" 
+          name="estado" 
+          class="campo__escrita"
+          ngModel
+          #estado="ngModel"
+          required
+        >
           <option value="AC">Acre</option>
           <option value="AL">Alagoas</option>
           <option value="AP">Amapá</option>
@@ -177,6 +241,11 @@
           <option value="TO">Tocantins</option>
           <option value="EX">Estrangeiro</option>
         </select>
+        <div *ngIf="estado?.invalid && estado?.touched || estado?.dirty">
+          <app-mensagem 
+            *ngIf="estado?.errors?.['required']" 
+            mensagem="O estado deve ser preenchido."></app-mensagem>
+        </div>
       </div>
     </div>
 
